--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -861,3 +861,145 @@ form .error {
   margin-top: 7px;
 }
 /* END POPUP*/
+
+/* BEGIN DOCUMENT */
+
+#document #headerDocument {
+  width: 100%;
+  color: #fff;
+  background-size: cover;
+  justify-content: center;
+  min-height: 200px;
+  margin-bottom: 20px;
+}
+
+#document #headerDocument.engineering {
+  background-image: url('../images/banners/subjects/banner_engineering.jpg');
+}
+
+#document #headerDocument.biology {
+  background-image: url('../images/banners/subjects/banner_biology.jpg');
+}
+
+#document #headerDocument.computer {
+  background-image: url('../images/banners/subjects/banner_computer.jpg');
+}
+
+#document #headerDocument.economy {
+  background-image: url('../images/banners/subjects/banner_economy.jpg');
+}
+
+#document #headerDocument.finance {
+  background-image: url('../images/banners/subjects/banner_finance.jpg');
+}
+
+#document #headerDocument.history {
+  background-image: url('../images/banners/subjects/banner_history.jpg');
+}
+
+#document #headerDocument.language {
+  background-image: url('../images/banners/subjects/banner_language.jpg');
+}
+
+#document #headerDocument.management {
+  background-image: url('../images/banners/subjects/banner_management.jpg');
+}
+
+#document #headerDocument .title {
+  font-size: 40px;
+  margin-top: 110px;
+  font-weight: bolder;
+  text-shadow: 1px 1px #62707f;
+}
+
+#document #content .title {
+  color: #444;
+  font-size: 25px;
+  line-height: 25px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  display: inline-block;
+  margin-top: 25px;
+}
+
+#document .description {
+  color: #444;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+
+#document .button-document-detail {
+  margin-top: 10px;
+}
+
+#document .score {
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 10px;
+  position: relative;
+  top:-3px;
+}
+
+
+#document .score label {
+  color: grey;
+}
+
+#document .score input[type = "radio"] {
+  display: none;
+}
+
+#document .score  {
+  direction: rtl; /* right to left */
+  unicode-bidi: bidi-override; /* bidi de bidireccional */
+}
+
+#document .score label:hover {
+  color: orange;
+}
+
+#document .score label:hover ~ label{color:orange;}
+
+#document .score input[type = "radio"]:checked ~ label{color:orange;}
+
+#document .complaint {
+  display: inline-block;
+  position: relative;
+  top:-4px;
+  cursor: pointer;
+}
+#document .complaint img {
+  width: 22px;
+  height: 22px;
+}
+
+#document .blog-info a{
+  text-decoration: none;
+  color: #555;
+}
+
+#document .comments-container{
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+#document .comments-container img{
+  width: 60px;
+  position: relative;
+}
+#document .comments-container .add-comment-container{
+  margin-top: 30px;
+}
+#document .comments-container .add-comment-container img{
+  width: 60px;
+  position: relative;
+}
+#document .comments-container .add-comment-container textarea{
+  resize: none;
+}
+#document .comments-container .add-comment-container button{
+  margin-top: 5px;
+}
+/* END DOCUMENT */
