--- a/app/views/user.html
+++ b/app/views/user.html
@@ -5,8 +5,10 @@
         <div class="image-user col-md-2 js-image-user">
           <div class="edit-img js-edit-image"><i class="fa fa-pencil"></i></div>
           <img ng-if="!userProfile.foto.base64Src" src="images/anon-user.jpg" class="img-responsive js-img-profile"/>
-          <img ng-if="userProfile.foto.base64Src" ng-src="{{userProfile.foto.base64Src}}" class="img-responsive js-img-profile"/>
-          <form action={{"alumno/"+userProfile.id+"/profile/image"}} method="POST" enctype="multipart/form-data" class="hide">
+          <img ng-if="userProfile.foto.base64Src" ng-src="{{userProfile.foto.base64Src}}"
+               class="img-responsive js-img-profile"/>
+          <form action={{"alumno/"+userProfile.id+"/profile/image"}} method="POST" enctype="multipart/form-data"
+                class="hide">
             <input class="js-add-image" type="file" name="profileImage" accept=".jpg,.jpeg"/>
           </form>
         </div>
@@ -42,37 +44,75 @@
     </div>
   </div>
   <hr class="blog-post-sep">
-  <div id="myDocuments">
+  <div id="uploadedDocuments">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{'user.my_documents' | translate }}</h1>
-          <div class="description">
-            {{'user.without_documents' | translate }}
+          <h1>{{'user.uploaded_documents' | translate }}</h1>
+          <div class="row" ng-repeat="(key, document) in uploadedDocuments">
+            <div class="document-list-item col-md-12 col-sm-12">
+              <a href="#/document/{{document.id}}" >
+                <div class="title">{{document.nombre}}</div>
+              </a>
+              <ul class="blog-info">
+                <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
+                <li><i class="fa fa-tags"></i>
+                  <a href="#/entity/{{document.entidad.id}}" >{{document.entidad.nombreCorto}}</a>,
+                  <a href="#/subject/{{document.materia.id}}" >{{document.materia.nombre}}</a>,
+                  {{document.idioma.nombre}}
+                </li>
+                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}} ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)</li>
+              </ul>
+              <div class="description">{{ document.descripcion }}</div>
+              <br/>
+            </div>
+
+
+          </div>
+          <div ng-if="uploadedDocuments.length == 0" class="filter without-documents">
+            {{'user.without_uploaded_documents' | translate }}
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div id="myActivity">
+  <div id="sharedDocuments">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{'user.my_activity' | translate }}</h1>
-          <div class="description">
-            {{'user.without_activity' | translate }}
+          <h1>{{'user.shared_documents' | translate }}</h1>
+          <div class="row" ng-repeat="(key, document) in sharedDocuments">
+            <div class="document-list-item col-md-12 col-sm-12">
+              <a href="#/document/{{document.id}}" >
+                <div class="title">{{document.nombre}}</div>
+              </a>
+              <div class="score" ng-if="document['creador'] !== user['id']">
+                <input id="d{{document.id}}-score5" type="radio" name="d{{document.id}}-score" value="5" ng-click="sendScore(5)" ng-checked="isScored && documentScore === 5"><label for="d{{document.id}}-score5">★</label>
+                <input id="d{{document.id}}-score4" type="radio" name="d{{document.id}}-score" value="4" ng-click="sendScore(4)" ng-checked="isScored && documentScore === 4"><label for="d{{document.id}}-score4">★</label>
+                <input id="d{{document.id}}-score3" type="radio" name="d{{document.id}}-score" value="3" ng-click="sendScore(3)" ng-checked="isScored && documentScore === 3"><label for="d{{document.id}}-score3">★</label>
+                <input id="d{{document.id}}-score2" type="radio" name="d{{document.id}}-score" value="2" ng-click="sendScore(2)" ng-checked="isScored && documentScore === 2"><label for="d{{document.id}}-score2">★</label>
+                <input id="d{{document.id}}-score1" type="radio" name="d{{document.id}}-score" value="1" ng-click="sendScore(1)" ng-checked="isScored && documentScore === 1"><label for="d{{document.id}}-score1">★</label>
+              </div>
+              <ul class="blog-info">
+                <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
+                <li><i class="fa fa-tags"></i>
+                  <a href="#/entity/{{document.entidad.id}}" >{{document.entidad.nombreCorto}}</a>,
+                  <a href="#/subject/{{document.materia.id}}" >{{document.materia.nombre}}</a>,
+                  {{document.idioma.nombre}}
+                </li>
+
+                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}} ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)</li>
+
+              </ul>
+
+              <div class="description">{{ document.descripcion }}</div>
+              <br/>
+            </div>
+
+
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="myFavs">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>{{'user.my_favs' | translate }}</h1>
-          <div class="description">
-            {{'user.without_favs' | translate }}
+          <div ng-if="sharedDocuments.length == 0" class="filter without-documents">
+            {{'user.without_shared_documents' | translate }}
           </div>
         </div>
       </div>
