--- a/app/views/directives/documentItem.html
+++ b/app/views/directives/documentItem.html
@@ -5,7 +5,8 @@
   <div class="complaint" ng-click="reportDocument()">
     <img src="images/complaint-icon.png" alt="Denunciar">
   </div>
-  <div class="score" ng-if="document['creador'] !== user['id']">
+
+  <div class="score" ng-if="document.creador.id !== user.id">
     <input id="d{{document.id}}-score5" type="radio" name="d{{document.id}}-score" value="5" ng-click="sendScore(5)" ng-checked="isScored && documentScore === 5"><label for="d{{document.id}}-score5">★</label>
     <input id="d{{document.id}}-score4" type="radio" name="d{{document.id}}-score" value="4" ng-click="sendScore(4)" ng-checked="isScored && documentScore === 4"><label for="d{{document.id}}-score4">★</label>
     <input id="d{{document.id}}-score3" type="radio" name="d{{document.id}}-score" value="3" ng-click="sendScore(3)" ng-checked="isScored && documentScore === 3"><label for="d{{document.id}}-score3">★</label>
@@ -13,6 +14,7 @@
     <input id="d{{document.id}}-score1" type="radio" name="d{{document.id}}-score" value="1" ng-click="sendScore(1)" ng-checked="isScored && documentScore === 1"><label for="d{{document.id}}-score1">★</label>
   </div>
   <ul class="blog-info">
+    <li><i class="fa fa-user"></i>{{'document_item.uploaded_by' | translate }} <a href="#/user/{{document.creador.id}}">{{ document.creador.username }}</a></li>
     <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
     <li><i class="fa fa-comments"></i> {{document.comments.length}}</li>
     <li><i class="fa fa-tags"></i>
