--- a/app/views/document.html
+++ b/app/views/document.html
@@ -39,6 +39,7 @@
             Descargar
           </button>
           <ul class="blog-info">
+            <li><i class="fa fa-user"></i>{{'document_item.uploaded_by' | translate }} <a href="#/user/{{document.creador.id}}">{{ document.creador.username }}</a></li>
             <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'yyyy/dd/MM' }}</li>
             <li><i class="fa fa-comments"></i> {{document.comments.length}}</li>
             <li><i class="fa fa-tags"></i>
@@ -58,38 +59,13 @@
       <div class="row">
         <div class="col-md-6">
           <h3>{{'document.comments' | translate }}</h3>
-          <div class="comments-container">
-            <div class="media" ng-repeat="(key, comment) in document.comments">
-              <a href="#" class="pull-left">
-                <img ng-if="!comment.creador.foto.base64Src" src="images/anon-user.jpg">
-                <img ng-if="comment.creador.foto.base64Src" ng-src="{{comment.creador.foto.base64Src}}"/>
-              </a>
-              <div class="media-body">
-                <h4 class="media-heading">
-                  <span>{{comment.fecha}}</span>
-                </h4>
-                <p>
-                  {{comment.mensaje}}
-                </p>
-              </div>
-            </div>
-            <div class="add-comment-container media">
-              <a href="#" class="pull-left">
-                <img ng-if="!user.foto.base64Src" src="images/anon-user.jpg" alt="">
-                <img ng-if="user.foto.base64Src" ng-src="{{user.foto.base64Src}}"/>
-              </a>
-              <div class="media-body">
-                <textarea class="form-control" placeholder="Ingrese un comentario" ng-model="currentCommentStr"/>
-                <button class="btn btn-md btn-primary pull-right" ng-click="sendComment()">Enviar</button>
-              </div>
-            </div>
-          </div>
+          <comments entity="document" ></comments>
         </div>
         <div class="col-md-6">
           <h3>{{'document.related_documents' | translate }}</h3>
           <div class="row">
             <div class="col-md-12">
-              <div class="row" ng-repeat="(key, document) in relatedDocuments" style="margin-bottom: 35px;">
+              <div class="row" ng-repeat="(key, document) in relatedDocuments" style="margin-bottom: 5px;">
                 <div class="document-list-item document-list-item-small col-md-12 col-sm-12">
                   <a href="#/document/{{document.id}}" >
                     <div class="title">
@@ -98,6 +74,7 @@
                     </div>
                   </a>
                   <ul class="blog-info">
+                    <li><i class="fa fa-user"></i>{{'document_item.uploaded_by' | translate }} <a href="#/user/{{document.creador.id}}">{{ document.creador.username }}</a></li>
                     <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
                     <li><i class="fa fa-tags"></i>
                         <a href="#/entity/{{document.entidad.id}}">{{document.entidad.nombreCorto}}</a>,
