--- a/app/views/user.html
+++ b/app/views/user.html
@@ -3,20 +3,20 @@
     <div id="infoUser" class="row">
       <div class="col-md-12">
         <div class="image-user col-md-2 js-image-user">
-          <div class="edit-img js-edit-image"><i class="fa fa-pencil"></i></div>
+          <div ng-if="isProfileUserLogged" class="edit-img js-edit-image"><i class="fa fa-pencil"></i></div>
           <img ng-if="!userProfile.foto.base64Src" src="images/anon-user.jpg" class="img-responsive js-img-profile"/>
           <img ng-if="userProfile.foto.base64Src" ng-src="{{userProfile.foto.base64Src}}"
                class="img-responsive js-img-profile"/>
-          <form action={{"alumno/"+userProfile.id+"/profile/image"}} method="POST" enctype="multipart/form-data"
+          <form ng-if="isProfileUserLogged" #user #infoUser .user-usernameaction={{"alumno/"+userProfile.id+"/profile/image"}} method="POST" enctype="multipart/form-data"
                 class="hide">
-            <input class="js-add-image" type="file" name="profileImage" accept=".jpg,.jpeg"/>
+            <input  class="js-add-image" type="file" name="profileImage" accept=".jpg,.jpeg"/>
           </form>
         </div>
         <div class="content-user col-md-6">
           <div class="user-username js-user-username">
             {{userProfile.username ? userProfile.username : 'user.input_your_username' | translate}}
           </div>
-          <div class="edit-profile js-edit-profile">
+          <div ng-if="isProfileUserLogged" class="edit-profile js-edit-profile">
             <span ng-show="!onEditProfile">{{'user.edit_profile' | translate}}</span>
             <span ng-show="onEditProfile">{{'user.finish_edit_profile' | translate}}</span>
           </div>
@@ -76,7 +76,7 @@
       </div>
     </div>
   </div>
-  <div id="sharedDocuments">
+  <div  ng-if="isProfileUserLogged" id="sharedDocuments">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
