--- a/app/views/document.html
+++ b/app/views/document.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>{{'document.comments' | translate }}</h3>
-          <comments entity="document" ></comments>
+          <comments entity="document" type="'document'" user="user"></comments>
         </div>
         <div class="col-md-6">
           <h3>{{'document.related_documents' | translate }}</h3>
