--- a/app/views/subject.html
+++ b/app/views/subject.html
@@ -10,23 +10,33 @@
   </div>
   <div id="content">
     <div class="container">
+
       <div class="row">
-        <div class="col-md-12">
-          <h3>{{'subject_section.related_documents' | translate}}</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="search-result">
-            <div class="row" ng-repeat="(key, document) in documents">
-              <document-item document="document"></document-item>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-12">
+              <h3>{{'subject_section.related_documents' | translate}}</h3>
             </div>
-            <div ng-if="documents.length == 0" class="filter without-documents">
-              {{'search.without_documents' | translate }}
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="search-result">
+                <div class="row" ng-repeat="(key, document) in documents">
+                  <document-item document="document"></document-item>
+                </div>
+                <div ng-if="documents.length == 0" class="filter without-documents">
+                  {{'search.without_documents' | translate }}
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        <div class="col-md-4  blog-item">
+          <h3>{{'document.comments' | translate }}</h3>
+          <comments entity="subject" type="'subject'" user="user"></comments>
+        </div>
       </div>
+
     </div>
   </div>
   <div id="headerSearch">
