--- a/app/views/user.html
+++ b/app/views/user.html
@@ -7,9 +7,10 @@
           <img ng-if="!userProfile.foto.base64Src" src="images/anon-user.jpg" class="img-responsive js-img-profile"/>
           <img ng-if="userProfile.foto.base64Src" ng-src="{{userProfile.foto.base64Src}}"
                class="img-responsive js-img-profile"/>
-          <form ng-if="isProfileUserLogged" action={{"alumno/"+userProfile.id+"/profile/image"}} method="POST" enctype="multipart/form-data"
+          <form ng-if="isProfileUserLogged" action={{"alumno/"+userProfile.id+"/profile/image"}} method="POST"
+                enctype="multipart/form-data"
                 class="hide">
-            <input  class="js-add-image" type="file" name="profileImage" accept=".jpg,.jpeg"/>
+            <input class="js-add-image" type="file" name="profileImage" accept=".jpg,.jpeg"/>
           </form>
         </div>
         <div class="content-user col-md-6">
@@ -49,21 +50,21 @@
       <div class="row">
         <div class="col-md-12">
           <h1>{{'user.uploaded_documents' | translate }}</h1>
-          <div class="row" ng-repeat="(key, document) in uploadedDocuments">
+          <div class="row" id="documentId{{document.id}}" ng-repeat="(key, document) in uploadedDocuments">
             <div class="document-list-item col-md-12 col-sm-12">
-              <a href="#/document/{{document.id}}" >
+              <a href="#/document/{{document.id}}">
                 <div class="title">{{document.nombre}}</div>
-
-
               </a>
               <ul class="blog-info">
                 <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
                 <li><i class="fa fa-tags"></i>
-                  <a href="#/entity/{{document.entidad.id}}" >{{document.entidad.nombreCorto}}</a>,
-                  <a href="#/subject/{{document.materia.id}}" >{{document.materia.nombre}}</a>,
+                  <a href="#/entity/{{document.entidad.id}}">{{document.entidad.nombreCorto}}</a>,
+                  <a href="#/subject/{{document.materia.id}}">{{document.materia.nombre}}</a>,
                   {{document.idioma.nombre}}
                 </li>
-                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}} ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)</li>
+                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}}
+                  ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)
+                </li>
               </ul>
               <div class="description">{{ document.descripcion }}</div>
               <br/>
@@ -74,16 +75,17 @@
               </a>
               <a ng-if="isProfileUserLogged" href="#/document/edit/versions/{{document.id}}">
                 <button class="btn blue btn-sm" style="margin-top: 10px;">
-                  Administrar versiones
+                  {{'user.admin_versions_document' | translate }}
                 </button>
               </a>
               <a ng-if="isProfileUserLogged" href="#/document/edit/versions/{{document.id}}">
                 <button class="btn btn-default btn-sm" style="margin-top: 10px;">
-                  Administrar compartidos
+                  {{'user.admin_shared_document' | translate }}
                 </button>
               </a>
-              <button class="btn red btn-sm js-remove-document" data-id="{{document.id}}" style="margin-top: 10px;">
-                  Eliminar
+              <button class="btn red btn-sm" ng-click="removeDocument(document)" style="margin-top: 10px;">
+                {{'user.remove_document' | translate }}
+
               </button>
             </div>
 
@@ -96,33 +98,44 @@
       </div>
     </div>
   </div>
-  <div  ng-if="isProfileUserLogged" id="sharedDocuments">
+  <div ng-if="isProfileUserLogged" id="sharedDocuments">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h1>{{'user.shared_documents' | translate }}</h1>
           <div class="row" ng-repeat="(key, document) in sharedDocuments">
             <div class="document-list-item col-md-12 col-sm-12">
-              <a href="#/document/{{document.id}}" >
+              <a href="#/document/{{document.id}}">
                 <div class="title">{{document.nombre}}</div>
               </a>
               <div class="score" ng-if="document['creador'] !== user['id']">
-                <input id="d{{document.id}}-score5" type="radio" name="d{{document.id}}-score" value="5" ng-click="sendScore(5)" ng-checked="isScored && documentScore === 5"><label for="d{{document.id}}-score5">★</label>
-                <input id="d{{document.id}}-score4" type="radio" name="d{{document.id}}-score" value="4" ng-click="sendScore(4)" ng-checked="isScored && documentScore === 4"><label for="d{{document.id}}-score4">★</label>
-                <input id="d{{document.id}}-score3" type="radio" name="d{{document.id}}-score" value="3" ng-click="sendScore(3)" ng-checked="isScored && documentScore === 3"><label for="d{{document.id}}-score3">★</label>
-                <input id="d{{document.id}}-score2" type="radio" name="d{{document.id}}-score" value="2" ng-click="sendScore(2)" ng-checked="isScored && documentScore === 2"><label for="d{{document.id}}-score2">★</label>
-                <input id="d{{document.id}}-score1" type="radio" name="d{{document.id}}-score" value="1" ng-click="sendScore(1)" ng-checked="isScored && documentScore === 1"><label for="d{{document.id}}-score1">★</label>
+                <input id="d{{document.id}}-score5" type="radio" name="d{{document.id}}-score" value="5"
+                       ng-click="sendScore(5)" ng-checked="isScored && documentScore === 5"><label
+                for="d{{document.id}}-score5">★</label>
+                <input id="d{{document.id}}-score4" type="radio" name="d{{document.id}}-score" value="4"
+                       ng-click="sendScore(4)" ng-checked="isScored && documentScore === 4"><label
+                for="d{{document.id}}-score4">★</label>
+                <input id="d{{document.id}}-score3" type="radio" name="d{{document.id}}-score" value="3"
+                       ng-click="sendScore(3)" ng-checked="isScored && documentScore === 3"><label
+                for="d{{document.id}}-score3">★</label>
+                <input id="d{{document.id}}-score2" type="radio" name="d{{document.id}}-score" value="2"
+                       ng-click="sendScore(2)" ng-checked="isScored && documentScore === 2"><label
+                for="d{{document.id}}-score2">★</label>
+                <input id="d{{document.id}}-score1" type="radio" name="d{{document.id}}-score" value="1"
+                       ng-click="sendScore(1)" ng-checked="isScored && documentScore === 1"><label
+                for="d{{document.id}}-score1">★</label>
               </div>
               <ul class="blog-info">
                 <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
                 <li><i class="fa fa-tags"></i>
-                  <a href="#/entity/{{document.entidad.id}}" >{{document.entidad.nombreCorto}}</a>,
-                  <a href="#/subject/{{document.materia.id}}" >{{document.materia.nombre}}</a>,
+                  <a href="#/entity/{{document.entidad.id}}">{{document.entidad.nombreCorto}}</a>,
+                  <a href="#/subject/{{document.materia.id}}">{{document.materia.nombre}}</a>,
                   {{document.idioma.nombre}}
                 </li>
 
-                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}} ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)</li>
-
+                <li ng-if="document.puntuacionCantidad >= 1"><i class="fa fa-star"></i> {{document.puntuacion}}
+                  ({{document.puntuacionCantidad}} <i class="fa fa-user"></i>)
+                </li>
               </ul>
 
               <div class="description">{{ document.descripcion }}</div>
@@ -138,5 +151,28 @@
       </div>
     </div>
   </div>
+  <div ng-if="isProfileUserLogged && removedDocuments.length > 0" id="removedDocuments">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>{{'user.removed_documents' | translate }}</h1>
+          <div class="row" id="documentId{{document.id}}" ng-repeat="(key, document) in removedDocuments">
+            <div class="document-list-item col-md-12 col-sm-12">
+              <a href="#">
+                <div class="title">{{document.nombre}}</div>
+              </a>
+              <br/>
+              <div class="description">{{ document.descripcion }}</div>
+              <br/>
+              <button class="btn green btn-sm" ng-click="restoreDocument(document)" style="margin-top: 10px;">
+                {{'user.restore_document' | translate }}
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
