--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1045,40 +1045,74 @@ form .error {
 }
 
 /* END DOCUMENT */
-.blog-item h4.media-heading{
+.blog-item h4.media-heading {
   height: 15px;
 }
 
-
-.modal-body-versions{
+.modal-body-versions {
   padding-top: 0px;
 }
-.modal-body-versions .versions-container{margin-top: 10px; margin-bottom: 10px}
-.modal-body-versions .versions-container .header-versions{
+
+.modal-body-versions .versions-container {
+  margin-top: 10px;
+  margin-bottom: 10px
+}
+
+.modal-body-versions .versions-container .header-versions {
   border-bottom: 1px solid #CCCCCC;
   padding: 5px 8px 5px 8px;
   font-weight: bolder;
 }
-.modal-body-versions .versions-container .header-versions .date{
+
+.modal-body-versions .versions-container .header-versions .date {
   display: inline-block;
   width: 420px;
 }
-.modal-body-versions .versions-container .header-versions .download{
+
+.modal-body-versions .versions-container .header-versions .download {
   display: inline-block;
   width: 90px;
   text-align: center;
 }
-.modal-body-versions .versions-container .document-version{
+
+.modal-body-versions .versions-container .document-version {
   padding: 8px;
   border-bottom: 1px solid #CCCCCC;
 
 }
-.modal-body-versions .versions-container .document-version .version-date{
+
+.modal-body-versions .versions-container .document-version .version-date {
   display: inline-block;
   width: 420px;
 }
-.modal-body-versions .versions-container .document-version .version-download{
+
+.modal-body-versions .versions-container .document-version .version-download {
   display: inline-block;
   width: 90px;
   text-align: center;
+}
+
+.users-shared {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.users-shared .user-shared {
+  display: inline-block;
+  padding: 2px 20px 5px 10px;
+  background-color: #0362fd;
+  color: white;
+  margin-right: 10px;
+  font-size: 14px;
+  position: relative;
+}
+
+.users-shared .user-shared i {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 2px;
+  margin-right: 4px;
+  font-size: 11px;
+  cursor: pointer;
 }
