--- a/app/views/register.html
+++ b/app/views/register.html
@@ -11,22 +11,22 @@
                 <div class="error main-error js-form-error"></div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                    <input class="form-control js-username"  type="text" name="usuario" placeholder="{{'register.user_placeholder'| translate}}">
+                    <input class="form-control js-username"  type="text" name="usuario" placeholder="{{'register.user_placeholder'| translate}}" autocomplete="false">
                     <span class="error js-username-error"></span>
                 </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                    <input class="form-control js-email"  type="email" name="email" placeholder="{{'register.email_placeholder'| translate}}">
+                    <input class="form-control js-email" type="email" name="email" placeholder="{{'register.email_placeholder'| translate}}" autocomplete="false">
                     <span class="error js-email-error"></span>
                 </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                    <input type="password" class="form-control js-password" placeholder="{{'register.password_placeholder'| translate}}" type="password" name="password">
+                    <input type="password" class="form-control js-password" placeholder="{{'register.password_placeholder'| translate}}" type="password" name="password" autocomplete="false">
                     <span class="error js-password-error"></span>
                 </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                    <input type="password" class="form-control js-password-repeat" placeholder="{{'register.repeat_password_placeholder'| translate}}" name="passwordRepeat">
+                    <input type="password" class="form-control js-password-repeat" placeholder="{{'register.password_repeat_placeholder'| translate}}" name="passwordRepeat">
                     <span class="error js-password-repeat-error"></span>
                 </div>
                 <div class="row">
